fixed DELETE/POST request error
