# back-end/docs/swagger.json
@@ -875,6 +875,33 @@
         "tags": [
           "Inventory"
         ]
+      },
+      "delete": {
+        "operationId": "InventoryController_remove",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "x-role": []
+          }
+        ],
+        "summary": "Delete inventory record",
+        "tags": [
+          "Inventory"
+        ]
       }
     },
     "/api/inventory/adjust": {
